// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots DropdownButton Custom Button Render 1`] = `
<div
  className="css-1ry038z-Container eq9z4sp4"
>
  <button
    aria-disabled={false}
    className="leafygreen-ui-26sqyb css-mbqq81-StyledButton eq9z4sp2"
    data-cy="dropdown-button"
    disabled={false}
    id="searchable-dropdown"
    onClick={[Function]}
    type="button"
  >
    <div
      className="leafygreen-ui-1ktj4tm"
    />
    <div
      className="leafygreen-ui-sl5lf4"
    >
      <div
        className="css-czkpcu-ButtonContent eq9z4sp1"
      >
        <div
          className="css-soeq2u-LabelWrapper eq9z4sp3"
        >
          <b>
            Some Magic Button
          </b>
        </div>
      </div>
      <span
        className="leafygreen-ui-18n6mp2"
      >
        <svg
          alt=""
          aria-hidden={true}
          className="leafygreen-ui-rcvx4k"
          fill="none"
          height={16}
          role="presentation"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </button>
</div>
`;

exports[`storybook Storyshots DropdownButton Story 1`] = `
<div
  className="css-1ry038z-Container eq9z4sp4"
>
  <button
    aria-disabled={false}
    className="leafygreen-ui-26sqyb css-mbqq81-StyledButton eq9z4sp2"
    data-cy="dropdown-button"
    disabled={false}
    id="searchable-dropdown"
    onClick={[Function]}
    type="button"
  >
    <div
      className="leafygreen-ui-1ktj4tm"
    />
    <div
      className="leafygreen-ui-sl5lf4"
    >
      <div
        className="css-czkpcu-ButtonContent eq9z4sp1"
      >
        <div
          className="css-soeq2u-LabelWrapper eq9z4sp3"
        >
          <div
            className="css-197mxpc-OverflowBody eq9z4sp0 leafygreen-ui-1mngpnd"
            data-cy="dropdown-value"
          >
            Test
          </div>
        </div>
      </div>
      <span
        className="leafygreen-ui-18n6mp2"
      >
        <svg
          alt=""
          aria-hidden={true}
          className="leafygreen-ui-rcvx4k"
          fill="none"
          height={16}
          role="presentation"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </button>
</div>
`;
